--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "node-express6-es6-rest-api",
+  "name": "node-express-es6-rest-api",
   "version": "0.0.1",
-  "description": "",
+  "description": "Node ES6 Server w/ Babel",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "babel-node index.js --presets es2015,stage-2"
   },
-  "author": "",
+  "author": "Toan Tran <toantdfu@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "config": "^1.26.1",
     "express": "^4.15.2",
     "mongoose": "^4.9.8"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
