--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node index.js --presets es2015,stage-2"
   },
+  "engines": {
+    "node": "6.9.1"
+  },
   "author": "Toan Tran <toantdfu@gmail.com>",
   "license": "ISC",
   "dependencies": {
