--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/babel-node index.js --presets es2015,stage-2"
+    "start": "babel-node index.js --presets es2015,stage-2"
   },
   "engines": {
     "node": "6.9.1"
@@ -13,7 +13,6 @@
   "author": "Toan Tran <toantdfu@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "babel": "^6.23.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "config": "^1.26.1",
