--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js --presets es2015,stage-2"
+    "start": "babel-node index.js"
   },
   "engines": {
     "node": ">=6.9.1"
